# cronometrix

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Makefile  rust-toolchain.toml
backend/: .env.example  .gitignore  Cargo.toml
backend/scripts/: load_test.sh  run_write_queue_load_profiles.sh
backend/src/: common.rs  config.rs  errors.rs  http_trace.rs  lib.rs  main.rs  state.rs
backend/src/anomalies/: handlers.rs
backend/src/audit/: handlers.rs  models.rs  service.rs
backend/src/auth/: handlers.rs  middleware.rs  mod.rs  models.rs  rbac.rs  service.rs
backend/src/calc/: aggregation.rs  anomalies.rs  engine.rs  lunch.rs  mod.rs  models.rs  overnight.rs  overtime.rs
backend/src/daily_records/: handlers.rs  models.rs  service.rs
backend/src/db/: mod.rs  write_queue.rs
backend/src/db/migrations/: 001_initial_schema.sql  002_audit_triggers.sql  003_devices.sql  004_attendance_events.sql  005_command_audit_log.sql  006_devices_audit_triggers.sql  (+14 more)
backend/src/departments/: handlers.rs  models.rs  service.rs
backend/src/devices/: crypto.rs  handlers.rs  mod.rs  models.rs  service.rs
backend/src/employees/: handlers.rs  models.rs  service.rs
backend/src/enrollments/: dispatcher.rs  handlers.rs  image_pipeline.rs  isapi_face.rs  mod.rs  models.rs  pusher.rs  service.rs
backend/src/events/: handlers.rs  models.rs  service.rs
backend/src/isapi/: client.rs  events.rs  mod.rs  parser.rs  stream.rs
backend/src/leaves/: handlers.rs  mod.rs  models.rs  service.rs
backend/src/license/: fingerprint.rs  middleware.rs  mod.rs  service.rs
backend/src/recompute/: mod.rs  nightly.rs  worker.rs
backend/src/reports/: excel.rs  handlers.rs  mod.rs  models.rs  money.rs  periods.rs  service.rs
backend/src/rules/: handlers.rs  models.rs
backend/src/setup/: handlers.rs
backend/src/state/: mod.rs  paths.rs
backend/src/storage/: atomic_file.rs  mod.rs
backend/src/supervisor/: mod.rs  status.rs  task.rs  watchdog.rs
backend/src/tenant_info/: handlers.rs  models.rs  service.rs
backend/src/test_reset/: mod.rs
backend/src/users/: handlers.rs  models.rs  service.rs
backend/src/workers/: backfill.rs  capture_cleanup.rs  db_write.rs  mod.rs  purge.rs
backend/tests/: anomalies_handlers_test.rs  atomic_file_coverage_test.rs  audit_handlers_test.rs  audit_immutability_test.rs  auth_handlers_extra_test.rs  auth_models_test.rs  auth_tests.rs  calc_anomalies_test.rs  calc_lunch_test.rs  calc_tests.rs  capture_cleanup_test.rs  config_from_env_test.rs  daily_record_tests.rs  daily_records_handlers_test.rs  daily_records_service_test.rs  db_mod_test.rs  db_tests.rs  db_write_queue_test.rs  department_tests.rs  departments_service_test.rs  device_handlers_coverage_test.rs  device_tests.rs  devices_models_test.rs  e2e_binaries_test.rs  employee_tests.rs  employees_service_test.rs  enrollment_lifecycle_test.rs  enrollments_handlers_test.rs  enrollments_models_test.rs  enrollments_pusher_test.rs  enrollments_service_test.rs  enrollments_test.rs  event_tests.rs  events_handlers_extra_test.rs  events_service_edges_test.rs  face_capture_test.rs  http_tracing_test.rs  isapi_client_test.rs  isapi_parser_edges_test.rs  leave_tests.rs  (+23 more)
backend/tests/common/: mock_hikvision.rs  mod.rs
backend/tests/fixtures/: lottt_scenarios.json  test_license_privkey.pem
backend/tests/integration/: mod.rs
(+507 files in other folders)
