[package]
name = "cronometrix-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "timeout"] }
tower = "0.5"
libsql = "0.9.30"
jsonwebtoken = "10.3.0"
password-auth = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
anyhow = "1"
thiserror = "2"
validator = { version = "0.20", features = ["derive"] }
dotenvy = "0.15"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serde_json = "1"
axum-test = "16"
